--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "app-b-dashboard": "file:.server/Data/survey.json",
+    "axios": "^1.1.3",
     "cross-fetch": "^3.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
