firebase.config edited acc. to new firebase account

--- a/admin/src/.env
+++ b/admin/src/.env
@@ -2,15 +2,15 @@
 // REACT_APP
 // REACT_APP
 
-
-//   apiKey: "AIzaSyAA0IYxpCiN5p1-c1I_uagMVzCGHV8W4-Y",
-//   authDomain: "admin-page-for-pan-project.firebaseapp.com",
-//   projectId: "admin-page-for-pan-project",
-//   storageBucket: "admin-page-for-pan-project.appspot.com",
-//   messagingSenderId: "287013832992",
-//   appId: "1:287013832992:web:f0f263a1de1dd01f3eaf45",
-//   measurementId: "G-VWCKWJFKBH"
-
+// const firebaseConfig = {
+//     apiKey: "AIzaSyCDVDyGbzDbT6lS1cC9JmlvOv-bJGzimqI",
+//     authDomain: "panproject-d7a3d.firebaseapp.com",
+//     projectId: "panproject-d7a3d",
+//     storageBucket: "panproject-d7a3d.appspot.com",
+//     messagingSenderId: "453269059036",
+//     appId: "1:453269059036:web:02b27373bf583fe5ffcb19",
+//     databaseURL: 'https://panproject-d7a3d-default-rtdb.europe-west1.firebasedatabase.app'
+// }
 
 // // Initialize Firebase
 // const app = initializeApp(firebaseConfig);
