--- a/admin/.gitignore
+++ b/admin/.gitignore
@@ -12,6 +12,7 @@
 /build
 
 # misc
+/.env
 .DS_Store
 .env.local
 .env.development.local
@@ -24,4 +25,5 @@ yarn-error.log*
 
 #firebase.config
 firebase.config.jsx
+firebase.config.js
 
